2006-05-23  Paolo Borelli <pborelli@katamail.com>

	Fixes #342568

	* gnome-settings-sound.c (reload_foreach_cb): fixed leak.

2006-04-28  Joe Marcus Clarke <marcusi@freebsd.org>

	Fixes #338849

	* actions/acme-volume-gstreamer.c: added missing header to avoid
	64bit crash on missing prototype.

2006-04-27  Bastien Nocera  <hadess@hadess.net>

	* actions/Makefile.am:
	* actions/acme-brightness.png:
	* actions/acme-fb-level.c:
	* actions/acme-fb-level.h:
	* actions/acme.h:
	* gnome-settings-multimedia-keys.c: (do_action),
	(acme_filter_events), (gnome_settings_multimedia_keys_load):
	Remove references to the brightness controls, we have moved the
	functionality (and enhanced it!) to gnome-power-manager
	(Closes: #339857)

2006-04-20  Sergey Udaltsov <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: fixed the libxklavier engine
	initialization logic. Made the configuration error readable (bug
	333091)

2006-04-17  Ray Strode <rstrode@redhat.com>

	* gnome-settings-mouse.c (configure_button_layout): fix
	potential (tiny, hard to trigger) overrun (bug 338254)

2006-04-10  Marien Zwart <marienz@gentoo.org>

	Fixes #323724

	* gnome-settings-mouse.c (configure_button_layout): fixed button
	mapping with evdev/left handed.

2006-03-29  Arjan Timmerman <arjani@soulfly.nl>

        Fixes #334153

	* factory.c (register_server): no trim needed. Now really fixed.

2006-03-23  Rodrigo Moya <rodrigo@novell.com>

	* factory.c (register_server): set DISPLAY environment variable as
	it is, no trimming needed.

2006-03-06  Michael Witrant <mike@lepton.fr>

	Fixes #94049

	* factory.c (register_server): new function, does the registration
	per DISPLAY.
	(main): call register_server.

2006-03-02  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-sound.c (start_esd): don't spawn esd, already done
	by libesound.

2006-02-15  Jens Granseuer <jensgr@gmx.net>

	Fixes #331168

	* acme-volume-gstreamer.c (acme_volume_gstreamer_open): C89 compilation
	fixes.
