@@ -1,3 +1,10 @@
+2006-05-24  Paolo Borelli <pborelli@katamail.com>
+
+	Fixes #342570
+
+	* gnome-settings-multimedia-keys.c (update_kbd_cb, do_eject_action):
+	fixed leaked strings returned from gconf_client_get_string.
+
 2006-05-23  Paolo Borelli <pborelli@katamail.com>
 
 	Fixes #342568
